@@ -1,9 +1,16 @@
+2006-12-15 Eduin Carrillo <yecarrillo@yahoo.com>
+
+	* lwgeom/: Makefile, lwgeom_kml.c, lwpostgis.sql.in:
+	  New AsKML() function
+	* doc/postgis.xml: document new AsKML function.
+
 2006-12-13 Markus Schaber <schabi@logix-tt.com>
 
 	* README.postgis
           Fixed "hard upgrade" instructions.
 
 2006-12-05 Mark Leslie <mleslie@refractions.net>
+
 	* doc/postgis.xml:
 	  Added sections for the SQL-MM and ArcSDE function ports.
 
